--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,3 +40,9 @@ a {
     color-scheme: dark;
   }
 }
+
+@media (max-width: 768px) {
+  body {
+    overflow-y: hidden; /* Prevent vertical scroll on mobile */
+  }
+}
